# music-bar

./: .gitignore  NOTES.md  README.md  build.sh  musicbar.spec  notes.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/: command.py  musicBar.py  music_bar.py  run.py
src/assets/: music.icns
src/music_bar/: music_bar.py
tests/: test_command.py
