[project]
name = "music-bar"
version = "0.0.8"
description = "Apple Music Status Bar for MacOS. Easily control Music from the Status Bar and automatically updates Discord status to show your friends what you're listening to."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "darkdetect>=0.8.0",
    "osascript>=2020.12.3",
    "pypresence",
    "rumps>=0.4.0",
]
# Development Status :: Common values are:
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]
testpaths = [
    "tests/",
]
asyncio_mode = "auto"
addopts = "--cov=src/music_bar --cov-report=term-missing"

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D107",
  "G004",
  "ANN204",
  "INP001",
  "D104",
  "D213",
  "D203",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D103", "PLR2004", "ANN201", "ANN202", "ANN001", "D401", "D404"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@overload",
    "if TYPE_CHECKING:",
    "def __del__",
]
show_missing = true

[tool.coverage.run]
source = ["music_bar"]
branch = true
relative_files = true
omit = [
    ".tox/*",
    "tests/*",
]

[tool.uv.sources]
pypresence = { git = "https://github.com/qwertyquerty/pypresence", rev = "4e882c36d0f800c016c15977243ac9a49177095a" }

[dependency-groups]
dev = [
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
